the build command is now in pack json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "xmltest": "node app/kanjiXmlHelper/kanjiXmlHelper.js",
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "build": "npm run build"
+    "build": "cd client && npm install && npm run build && cd .. && npm install && npm start"
   },
   "repository": {
     "type": "git",
