--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "serverless-http": "^3.2.0",
+    "sqlite3": "^5.1.7",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
